# AlekSIS-Core

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  COPYRIGHT  COPYRIGHT.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  background.sh  backup_my_work_to_change_branches_I_did__-_model_for_feeds_-_show_feeds_on_dashboard_backu.patch  build.py  code_of_conduct.md  dev.sh  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  docker-startup.sh  dump.rdb  local.cfg  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
aleksis/core/: __init__.py  __main__.py  admin.py  anonymizers.py  apps.py  celery.py  checks.py  dashboard_widgets.py  data_checks.py  db_settings.py  decorators.py  filters.py  forms.py  health_checks.py  mailer.py  managers.py  menus.py  mixins.py  models.py  preferences.py  processors.py  registries.py  rules.py  search_indexes.py  settings.py  tables.py  tasks.py  urls.py  views.py
aleksis/core/dashboard/: models.py
aleksis/core/migrations/: 0001_initial.py  0002_activity_notification.py  0002_oauth2_token_model.py  0002_school_term.py  0002_school_year.py  0003_add_permissions_for_group_stats.py  0003_add_verbose_names.py  0003_group_school_year.py  0003_replace_user_by_person.py  0004_implement_photo_cropping.py  0004_replace_user_by_person.py  0005_add_verbose_names_meta.py  0005_data_check_result.py  0006_create_default_term.py  0006_data_check_result.py  0007_create_admin_user.py  0007_dashboard_widget_order.py  0008_extended_data.py  0008_rename_fields_notification_activity.py  0009_dashboard_widget.py  0009_rename_fields_notification_activity.py  0010_alter_fields_notification.py  0010_create_validation_service.py  0010_dashboardwidget_broken.py  0010_extended_data_gin_index.py  0010_oauth_permissions.py  0011_create_validation_service.py  0011_make_primary_group_optional.py  0011_oauth_permissions.py  0011_test_pdf_permission.py  0012_announcement.py  0012_pdf_file.py  0013_big_auto_field.py  0013_extensible_model_as_default.py  0013_multiple_recipients_announcement.py  0013_oauth_permissions.py  0013_pdf_file.py  0014_accouncement_recipients.py  0014_alter_pdffile_file.py  0014_merge.py  (+37 more)
aleksis/core/policy/: 00_pre.polar  01_models.polar
aleksis/core/schoolapps/: settings.py  urls.py
aleksis/core/static/: paper.css  print.css  style.scss  theme.scss
aleksis/core/templates/: 403.html  404.html  500.html  503.html  offline.html
aleksis/core/templatetags/: crud_events.py  dashboard.py  data_helpers.py  html_helpers.py
aleksis/core/util/: apps.py  auth_helpers.py  celery_progress.py  core_helpers.py  forms.py  maintenance.py  messages.py  middlewares.py  network.py  nextcloud.py  notifications.py  oauth.py  pdf.py  predicates.py  sass_helpers.py  search.py  tables.py
apps/: __init__.py
biscuit/core/: __init__.py  admin.py  anonymizers.py  apps.py  cronjobs.py  decorators.py  forms.py  menus.py  mixins.py  models.py  settings.py  signals.py  tables.py  urls.py  util.py  views.py  wsgi.py
biscuit/core/dashboard/: admin.py  caches.py  models.py
biscuit/core/debug/: admin.py  urls.py  views.py
biscuit/core/migrations/: 0001_initial.py  0002_fill_person_model.py  0002_school_term.py  0003_school_logo.py  0003_split_person_user.py  0004_group.py  0004_otp_yubikey.py  0004_yubi_otp.py  0005_person_short_name.py  0005_unlink_school.py  0006_create_superuser.py  0006_make_unique.py  (+12 more)
ci/: build_dist.yml  build_docker.yml  deploy.yml  deploy_packages.yml  deploy_pypi.yml  general.yml  pages.yml  staging.yml  test.yml
docker/: entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
docs/: conf.py  index.md  index.rst
docs/admin/: 00_index.rst  01_config.rst  01_install.rst  02_ldap.rst  02_psql.rst  02_psql.txt  03_psql.rst  04_celery_redis.rst  05_configuration_options.rst  05_storage.rst
docs/dev/: 01_setup.rst  02_install_apps.rst  03_run.rst  03_run_tests.rst  04_debian_survey.txt  04_materialize_templates.rst  05_extensible_models.rst  setup.rst
docs/ref/: 00_index.rst
dynselect/: README.md  build-for-django.sh  package-lock.json  package.json  webpack-build.config.js
dynselect/config/: env.js  webpack.config.js  webpackDevServer.config.js
dynselect/public/: index.html
dynselect/scripts/: start.js
dynselect/src/: App.js  index.js
dynselect2/: build.sh  gulpfile.js  mounter.js  package-lock.json  package.json
dynselect2/src/: App.js  index.js
pip-wheel-metadata/aleksis-1.0a4.dev0.dist-info/: METADATA
react/: babel.sh
react/src/: dashboard.js  rebus.js
schoolapps/: LDAP-groups-et-al.patch  helper.py  mailer.py  manage.py  meta.py  posixgrouptype.py  userinformation.py
schoolapps/aub/: README.md  admin.py  apps.py  decorators.py  filters.py  forms.py  models.py  models.py.save  urls.py  views.py
schoolapps/dashboard/: README.md  admin.py  caches.py  models.py  plan_caches.py  settings.py  urls.py  views.py
schoolapps/debug/: models.py  views.py
schoolapps/doc/: models.py
schoolapps/faq/: admin.py  forms.py  model_helper.py  models.py  parseIconNames.py  urls.py  views.py
schoolapps/fibu/: README.md  admin.py  apps.py  decorators.py  filters.py  forms.py  models.py  urls.py  views.py
schoolapps/mealplan/: admin.py  forms.py  models.py  urls.py  views.py
schoolapps/menu/: admin.py  default.odt  forms.py  models.py  views.py
schoolapps/schoolapps/: example_secure_settings.py  settings.py  urls.py
schoolapps/support/: forms.py  models.py  urls.py  views.py
schoolapps/teachers/: models.py
schoolapps/templates/: 404.html
schoolapps/timetable/: admin.py  failback_view.py  fallback_view.py  filters.py  forms.py  helper.py  hints.py  m2l.py  models.py  parse.py  pdf.py  settings.py  urls.py  views.py
schoolapps/todos/: models.py  urls.py  views.py
schoolapps/untisconnect/: api.py  api_helper.py  apps.py  datetimeutils.py  drive.py  events.py  models.py  parse.py  plan.py  sub.py  urls.py  utils.py  views.py
timetable-old/: urls.py  views.py
(+537 files in other folders)
