[tool.poetry]
name = "AlekSIS-Core"
version = "2.0a5.dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"
include = ["CHANGELOG.rst", "LICENCE.rst", "docs/*", "docs/**/*", "aleksis/**/*.mo", "tox.ini"]

description = "AlekSIS (School Information System) — Core"
authors = ["Dominik George <dominik.george@teckids.org>", "Julian Leucker <leuckeju@katharineum.de>", "mirabilos <thorsten.glaser@teckids.org>", "Frank Poetzsch-Heffter <p-h@katharineum.de>", "Tom Teichler <tom.teichler@teckids.org>", "Jonathan Weth <wethjo@katharineum.de>", "Hangzhi Yu <yuha@katharineum.de>"]
maintainers = ["Jonathan Weth <wethjo@katharineum.de>", "Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2-or-later"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/official/AlekSIS-Core"
documentation = "https://aleksis.org/AlekSIS-Core/docs/html/"
keywords = ["SIS", "education", "school", "digitisation", "school apps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[[tool.poetry.source]]
name = "gitlab"
url = "https://edugit.org/api/v4/projects/461/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
django-any-js = "^1.0"
django-debug-toolbar = "^3.2"
django-middleware-global-request = "^0.1.2"
django-menu-generator-ng = "^1.2.3"
django-tables2 = "^2.1"
Pillow = "^8.0"
django-phonenumber-field = {version = "<5.1", extras = ["phonenumbers"]}
django-sass-processor = "^0.8"
libsass = "^0.20.0"
colour = "^0.1.5"
dynaconf = {version = "^3.1", extras = ["yaml", "toml", "ini"]}
django-settings-context-processor = "^0.2"
django-auth-ldap = { version = "^2.2", optional = true }
django-maintenance-mode = "^0.16.0"
django-ipware = "^3.0"
django-impersonate = "^1.4"
django-hattori = "^0.2"
psycopg2 = "^2.8"
django_select2 = "^7.1"
requests = "^2.22"
django-two-factor-auth = { version = "^1.12.1", extras = [ "yubikey", "phonenumbers", "call", "sms" ] }
django-yarnpkg = "^6.0"
django-material = "^1.6.0"
django-pwa = "^1.0.8"
django-dynamic-preferences = "^1.9"
django_widget_tweaks = "^1.4.5"
django-filter = "^2.2.0"
django-templated-email = "^2.3.0"
html2text = "^2020.0.0"
django-ckeditor = "^6.0.0"
django-js-reverse = "^0.9.1"
calendarweek = "^0.5.0"
Celery = {version="^5.0.0", extras=["django", "redis"]}
django-celery-results = "^2.0.1"
django-celery-beat = "^2.2.0"
django-celery-email = "^3.0.0"
django-jsonstore = "^0.5.0"
django-polymorphic = "^3.0.0"
django-colorfield = "^0.4.0"
django-bleach = "^0.6.1"
django-guardian = "^2.2.0"
rules = "^2.2"
django-cache-memoize = "^0.1.6"
django-haystack = {version="3.0", allow-prereleases = true}
celery-haystack-ng = "^0.20"
django-dbbackup = "^3.3.0"
spdx-license-list = "^0.5.0"
license-expression = "^1.2"
django-reversion = "^3.0.7"
django-favicon-plus-reloaded = "^1.0.4"
django-health-check = "^3.12.1"
psutil = "^5.7.0"
celery-progress = "^0.1.0"
django-cachalot = "^2.3.2"
django-prometheus = "^2.1.0"
importlib-metadata = {version = "^3.0.0", python = "<3.9"}
django-model-utils = "^4.0.0"
bs4 = "^0.0.1"
django-uwsgi-ng = "^1.1.0"
django-extensions = "^3.1.1"
ipython = "^7.20.0"
django-redis = "^4.12.1"
django-storages = {version = "^1.11.1", optional = true}
boto3 = {version = "^1.17.33", optional = true}

[tool.poetry.extras]
ldap = ["django-auth-ldap"]
s3 = ["boto3", "django-storages"]

[tool.poetry.dev-dependencies]
aleksis-builddeps = "*"
uwsgi = "^2.0"

[tool.poetry.scripts]
aleksis-admin = 'aleksis.core.__main__:aleksis_cmd'

[tool.black]
line-length = 100
exclude = "/migrations/"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
